--- a/themes/terminal/layouts/partials/header.html
+++ b/themes/terminal/layouts/partials/header.html
@@ -1,4 +1,5 @@
 <header class="header">
+  <div id="alert"></div>
   <div class="header__inner">
     <div class="header__logo">
       {{ partial "logo.html" . }}
