--- a/layouts/partials/extended_head.html
+++ b/layouts/partials/extended_head.html
@@ -1,2 +1,2 @@
 <script type="text/javascript" src="/htmx.js"></script>
-<meta name="htmx-config" content='{"withCredentials": "true"}'>
+<script type="text/javascript" src="/remove-me.js"></script>
