Add user-aware nav bar items

--- a/layouts/partials/extended_head.html
+++ b/layouts/partials/extended_head.html
@@ -1,2 +1,4 @@
+<meta name="htmx-config" content='{"withCredentials": true}'>
 <script type="text/javascript" src="/htmx.js"></script>
 <script type="text/javascript" src="/remove-me.js"></script>
+
