--- a/themes/terminal/assets/css/form.scss
+++ b/themes/terminal/assets/css/form.scss
@@ -41,3 +41,24 @@ input {
     }
   }
 }
+
+.auth-wrapper{
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.auth-wrapper .auth-form {
+  max-width: 450px;
+  width: 100%;
+  padding: 0 20px;
+}
+
+.auth-wrapper h1{margin-bottom: 20px;}
+
+label {
+  display: block;
+  margin: 0.5rem 0;
+}
+
