--- a/partials/posts.html
+++ b/partials/posts.html
@@ -3,23 +3,23 @@
   <article class="post on-list">
     <h1 class="post-title">{{ .Title }}</h1>
     <div class="post-meta">
-      {{- if .CreatedAt -}}
-        <time class="post-date">
-          {{- .CreatedAt.Format "2006-01-02" -}}
-        </time>
-      {{- end -}}
-
-      {{- with .Metadata.author -}}
-      <span class="post-author">{{ . }}</span>
+      {{- with .Username -}}
+      <span>Submitter:&nbsp;<span class="post-author">{{ . }}</span></span>
       {{- end -}}
 
       {{ if .Metadata.tags }}
       <span class="">
         {{ range .Metadata.tags }}
-        {{- . -}}&nbsp;
+        {{- . -}},
         {{ end }}
       </span>
       {{ end }}
+
+      {{- with .CreatedAt -}}
+        <time class="post-date">
+          {{- .Format "2006-01-02" -}}
+        </time>
+      {{- end -}}
     </div>
 
 
