--- a/themes/terminal/assets/css/form.scss
+++ b/themes/terminal/assets/css/form.scss
@@ -74,3 +74,12 @@ button[disabled]{
   background-color: #cccccc;
   color: #666666;
 }
+
+
+textarea:invalid {
+  border: 2px dashed red;
+}
+
+textarea:valid {
+  border: 2px solid lime;
+}
