--- a/themes/terminal/layouts/_default/baseof.html
+++ b/themes/terminal/layouts/_default/baseof.html
@@ -13,7 +13,7 @@
 
   {{ partial "header.html" . }}
 
-  <div class="content">
+  <div id="content" class="content">
     {{ block "main" . }}
     {{ end }}
   </div>
