--- a/themes/terminal/assets/css/post.scss
+++ b/themes/terminal/assets/css/post.scss
@@ -29,11 +29,11 @@
   &-meta {
     font-size: 1rem;
     margin-bottom: 10px;
-    color: transparentize($accent, .3);
+    color: transparentize($accent, .6);
 
     & > *:not(:first-child) {
       &::before {
-        content: "::";
+        content: "|";
         display: inline-block;
         margin: 0 8px;
       }
