--- a/partials/posts.html
+++ b/partials/posts.html
@@ -21,7 +21,7 @@
         </time>
       {{- end -}}
 
-      {{ if $.LoggedIn }}
+      {{ if eq .OwnerID.String $.UserID }}
       <a href="#"
         hx-get="{{ $apiBaseURL }}/garbage/{{ .ID }}/edit"
         hx-target="#content"
