--- a/partials/posts.html
+++ b/partials/posts.html
@@ -2,25 +2,17 @@
  {{ $apiBaseURL := .ApiBaseUrl }}
  {{range .Posts}}
   <article class="post on-list">
-    <h1 class="post-title"><a href={{ .Url }}>{{ .Title }} {{if .Url}}(link){{end}}</a></h1>
+    <h1 class="post-title">{{ .Title }}</h1>
     <div class="post-meta">
       {{- with .Username -}}
       <span>Submitter:&nbsp;{{ . }}</span>
       {{- end -}}
-      {{ if .Metadata.tags }}
-      <span>
-        {{ range .Metadata.tags }}
-        {{- . -}},
-        {{ end }}
-      </span>
-      {{ end }}
-
       {{- with .CreatedAt -}}
         <time class="post-date">
           {{- .Format "2006-01-02" -}}
         </time>
       {{- end -}}
-
+      {{if .Url}}<a href={{ .Url }}>Link</a>{{ end }}
       {{ if eq .OwnerID.String $.UserID }}
       <a href="#"
         hx-get="{{ $apiBaseURL }}/garbage/{{ .ID }}/edit"
@@ -32,6 +24,18 @@
 
     <div class="post-content">
       {{ .Content }}
+    </div>
+
+    <br/>
+    <div class="post-meta">
+      {{ if .Metadata.tags }}
+      <span>tags</span>
+      <span>
+        {{ range .Metadata.tags }}
+        {{- . -}},
+        {{ end }}
+      </span>
+      {{ end }}
     </div>
   </article>
   {{end}}
