--- a/partials/garbage/list.html
+++ b/partials/garbage/list.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="post-content">
-      {{ .Content }}
+      <blockquote>{{ .Content }}</blockquote>
     </div>
 
     <br/>
