--- a/partials/nav/user_nav_items.html
+++ b/partials/nav/user_nav_items.html
@@ -1,2 +1,2 @@
-<li><a href="/garbage/new">Submit</a></li>
+<li><a href="/garbage/new/">Submit</a></li>
 <li><a href="{{ .ApiURL }}/users/logout">Log Out</a></li>
