Serve create account and login links from static content

--- a/partials/nav/non_user_nav_items.html
+++ b/partials/nav/non_user_nav_items.html
@@ -1,2 +1,2 @@
-<li><a href="/users/create">Create Account</a></li>
-<li><a href="/users/login">Login</a></li>
+<li><a href="/users/create/">Create Account</a></li>
+<li><a href="/users/login/">Login</a></li>
