Disable uplevel button when logged out

--- a/partials/garbage/show.tmpl
+++ b/partials/garbage/show.tmpl
@@ -3,12 +3,7 @@
   <h1 class="post-title">
   {{if .Url}}<a href={{ .Url }} target="_blank">{{.Title}} (link)</a>{{else}}{{.Title}}{{ end }}</h1>
   <div class="post-meta">
-    <button hx-put="{{ if ne $.UserID ""}}{{ $.ApiBaseUrl }}/garbage/{{ .ID }}/uplevel{{else}}#{{end}}">
-      <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-      <path fill="none" stroke="purple" stroke-linecap="round" stroke-linejoin="round" stroke-width="6" d="m12 4l-6 6m6-6l6 6m-6-6v10.5m0 5.5v-2.5"/>
-    </svg>
-    Uplevel <b><span hx-get="{{ $.ApiBaseUrl }}/garbage/{{ .ID }}/uplevel" hx-trigger="load"></span></b>
-    </button>
+    {{ template "uplevel_button.tmpl" (PostWrapper . $.UserID $.ApiBaseUrl) }}
     <span>Submitter:&nbsp;{{ .Username }}</span>
     {{ if eq .OwnerID.String $.UserID }}
     <a href="{{ $.ApiBaseUrl }}/garbage/{{ .ID }}/edit"
