Add nav items to mobile menu

--- a/themes/terminal/layouts/partials/mobile-menu.html
+++ b/themes/terminal/layouts/partials/mobile-menu.html
@@ -15,6 +15,7 @@
           </li>
         {{ end }}
       {{ end }}
+      <div hx-get="{{ .Site.Params.apiBaseUrl }}/nav/user_items" hx-trigger="load" hx-swap="outerHTML">
     </ul>
   </li>
 </ul>
