--- a/layouts/partials/extended_head.html
+++ b/layouts/partials/extended_head.html
@@ -1,3 +1,4 @@
 <script type="text/javascript" src="/htmx.js"></script>
 <script type="text/javascript" src="/remove-me.js"></script>
 <meta name="htmx-config" content='{"withCredentials": true}'>
+<script defer data-domain="garbagespeak.com" src="/js/script.tagged-events.js"></script>
