Add markdown support

--- a/partials/garbage/edit.html
+++ b/partials/garbage/edit.html
@@ -20,8 +20,7 @@
             wrap="soft"
             name="garbage"
             style="width: 100%"
-            placeholder="This may be any garbage speak seen in the wild. Refer to the FAQ for what constitues garbage
-                           speak.">{{.Garbage.Content}}</textarea>
+            placeholder="This may be any garbage speak seen in the wild. Refer to the FAQ for what constitues garbage speak.">{{.Garbage.Content}}</textarea>
 
   <label for="url">URL where seen (optional)</label>
   <input
