--- a/partials/garbage/show.tmpl
+++ b/partials/garbage/show.tmpl
@@ -23,7 +23,7 @@
     </time>
   </div>
   <div class="post-content">
-    <blockquote>{{ .Content }}</blockquote>
+    {{ .RenderedContent }}
   </div>
 
   <br/>
