--- a/themes/terminal/layouts/_default/baseof.html
+++ b/themes/terminal/layouts/_default/baseof.html
@@ -6,7 +6,8 @@
   {{ end }}
   {{ partial "head.html" . }}
 </head>
-<body class="{{- ( or .Params.color $.Site.Params.ThemeColor ) -}}" hx-select-oob="#alert" hx-ext="remove-me">
+<body class="{{- ( or .Params.color $.Site.Params.ThemeColor ) -}}" hx-select-oob="#alert" hx-ext="remove-me"
+             hx-boost="true">
 {{ $container := cond ($.Site.Params.FullWidthTheme | default false) "container full" (cond ($.Site.Params.CenterTheme | default false) "container center" "container") }}
 
 <div class="{{- $container -}}{{- cond ($.Site.Params.oneHeadingSize | default true) " headings--one-size" "" }}">
