Add note about spam folder in registration confirmation

--- a/partials/users/created.html
+++ b/partials/users/created.html
@@ -1,1 +1,2 @@
-<p>Your account has been created. Check for the verification email sent to: {{ .Email }}</p>
+<p>Your account has been created. Check for the verification email sent to: {{ .Email }}, and dont forget to check your
+spam folder. We've received reports that Gmail has been trying to stifle our thought leadership.</p>
